[package]
name = "pgx_json_schema"
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg11 = ["pgx/pg11"]
pg12 = ["pgx/pg12"]
pg13 = ["pgx/pg13"]
pg14 = ["pgx/pg14"]
pg15 = ["pgx/pg15"]
pg_test = []

[dependencies]
pgx = "0.6.1"
pgx-macros = "0.6.1"
serde_json = "1.0.88"
jsonschema = {version = "0.16.1", default-features = false, features = ["draft201909", "draft202012"]}
jtd = "0.3.1"
avro-rs = "0.13.0"

[dev-dependencies]
pgx-tests = "0.6.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
